Apply a class to bottomlinks for preventing wrapping in Chrome

--- a/src/css/euskalbar.css
+++ b/src/css/euskalbar.css
@@ -7,6 +7,11 @@ body
     width: 100%;
 }
 
+.estekak 
+{
+ float: left; white-space: nowrap; 
+}
+
 .irudia
 {
     width: 20px;
